<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.LoginACT">


    <TextView

        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="5dp"
        android:background="#DDDDDD"
        android:ems="10"
        android:hint="@string/prompt_nick"
        android:inputType="text"
        android:minHeight="60dp"
        android:padding="3dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#DDDDDD"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="60dp"
        android:padding="3dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="75dp"
        android:gravity="center"
        android:text="@string/action_sign_in_short" />

    <LinearLayout
        android:id="@+id/tv_noacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/tv_c_regacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/register"
            android:textColor="@color/purple_500" />
    </LinearLayout>

</LinearLayout>








