<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDemoQuizQuest1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/quest1desc"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDemoQuiz1" />

    <TextView
        android:id="@+id/tvDemoQuizQuest1.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/quest1.2desc"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="@+id/tvDemoQuizQuest1"
        app:layout_constraintStart_toStartOf="@+id/tvDemoQuizQuest1"
        app:layout_constraintTop_toBottomOf="@+id/tvDemoQuizQuest1" />

    <EditText
        android:id="@+id/et1QuestAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/quest_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tvDemoQuizQuest1.2"
        app:layout_constraintStart_toStartOf="@+id/tvDemoQuizQuest1.2"
        app:layout_constraintTop_toBottomOf="@+id/tvDemoQuizQuest1.2" />

    <Button
        android:id="@+id/b1QuestAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/answer_text"
        app:layout_constraintEnd_toEndOf="@+id/et1QuestAnswer"
        app:layout_constraintStart_toStartOf="@+id/et1QuestAnswer"
        app:layout_constraintTop_toBottomOf="@+id/et1QuestAnswer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/tvDemoQuiz1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDemoQuiz1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest1"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>